# egui-ctf

./: .env  .gitignore  Cargo.toml  Nomadfile  Trunk.toml  deploy.sh  egui_ctf.js  index.html  justfile  migrate.sh
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: docker-base.yml  docker.yml  pages.yml  rust.yml
backend/: Cargo.toml  Dockerfile  Dockerfile.base  run.sh
backend/src/: main.rs  messages.rs  start_connection.rs  ws_conn.rs
backend/src/ctf_server/: ai_teams.rs  mod.rs
backend/src/ctf_server/handlers/: authenticated_create_team.rs  authenticated_join_team.rs  authenticated_leave_team.rs  authenticated_submit_flag.rs  mod.rs  unauthenticated_connect.rs  unauthenticated_login.rs
backend/src/game_server/: game_room.rs  mod.rs
backend/src/game_server/games/: guess_the_number.rs  mod.rs
backend/src/game_server/games/battlesnake/: mod.rs  snake.rs
backend/src/repo/: mod.rs
common/: Cargo.toml  test_slides.ron
common/src/: ctf_message.rs  game_message.rs  lib.rs
common/src/room/: mod.rs
discord-bot/: Cargo.toml  Dockerfile  Dockerfile.base
discord-bot/src/: main.rs
discord-bot/src/commands/: create_interactive_prompt.rs  mod.rs  ping.rs  token.rs
entity/src/entities/: challenge.rs  hacker.rs  message_component_data.rs  mod.rs  prelude.rs  submission.rs  team.rs  token.rs
entity/src/helpers/: mod.rs
frontend/: Cargo.toml  Trunk.toml
frontend/src/: app.rs  lib.rs
frontend/src/app/: backend_domain.txt  connection_state.rs  ctf_ui.rs  mod.rs
frontend/src/app/panels/: challenge_list.rs  challenge_panel.rs  connecting.rs  hacker_list.rs  login.rs  mod.rs  scoreboard.rs  team.rs
frontend/src/panels/: challenge_list.rs  challenge_panel.rs  login.rs  mod.rs  scoreboard.rs  submission.rs  team.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20230620_142127_team.rs  m20230620_143222_hacker.rs  m20230620_143225_challenge.rs  m20230620_143309_submission.rs  m20230622_165808_login_token.rs
src/: app.rs  lib.rs  main.rs
src/panels/: frontend.rs  hacker_list.rs  login.rs  mod.rs  submission.rs  team.rs
