[package]
name = "eframe_template"
version = "0.1.0"
authors = ["Emil Ernerfeldt <emil.ernerfeldt@gmail.com>"]
edition = "2021"
rust-version = "1.65"

[workspace]
members = [
    "backend",
    "common",
    "migration",
    "entity",
    "discord-bot",
]

[dependencies]
# eframe = { version = "0.21.0", default-features = false, features = [
#     "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
#     "default_fonts", # Embed the default egui fonts.
#     "wgpu",          # Use the glow rendering backend. Alternative: "wgpu".
#     "persistence",   # Enable restoring app state when restarting the app.
# ] }


# Egui
egui = "0.22.0"
ewebsock = { git = "https://github.com/rerun-io/ewebsock" }
eframe = { version = "0.22.0", default-features = false, features = [
    "persistence", "wgpu", "default_fonts"
] }
egui-notify = "0.7.0"
egui_extras = "0.22.0"

# You only need serde if you want app persistence:
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"

# Common
common = { path = "common" }
log = "0.4.19"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { version = "0.16.0", features = ["webgl"] }
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4"
wasm-bindgen-console-logger = "0.1.1"


[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }
