[package]
name = "h4tt-discord-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
entity = { path = "../entity" }

# Shuttle deps
# shuttle-serenity = "0.20.0"
# shuttle-runtime = "0.20.0"
# shuttle-secrets = "0.20.0"
# shuttle-shared-db = { version = "0.20.0", features = ["postgres"] }

serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
sea-orm = { version = "0.11.3", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
chrono = "0.4.26"
# sea-orm = { version = "0.11.3", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros" ] }

serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
uuid = "1.4.0"