[package]
name = "egui_ctf"
version = "0.1.0"
authors = ["Emil Ernerfeldt <emil.ernerfeldt@gmail.com>"]
edition = "2021"
rust-version = "1.65"

[dependencies]
# eframe = { version = "0.21.0", default-features = false, features = [
#     "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
#     "default_fonts", # Embed the default egui fonts.
#     "wgpu",          # Use the glow rendering backend. Alternative: "wgpu".
#     "persistence",   # Enable restoring app state when restarting the app.
# ] }


# Egui
egui = "0.22.0"
ewebsock = { git = "https://github.com/AngelOnFira/ewebsock" }
eframe = { version = "0.22.0", default-features = false, features = [
    "persistence", "wgpu", "default_fonts"
] }
egui-notify = "0.7.0"
egui_extras = "0.22.0"
# egui_cable = { path = "../../egui_cable" }

# You only need serde if you want app persistence:
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"

# Common
common = { path = "../common" }
log = "0.4.19"
itertools = "0.11.0"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { version = "0.16.0", features = ["webgl"] }
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4"
wasm-bindgen-console-logger = "0.1.1"
